# CMakePCHCompiler

./: .gitignore  CMakePCHCompiler.cmake  pch_include.cpp.in
test/: Readme.md  test.py
test/testproject1/: CMakeLists.txt  header2.h  main.cpp
test/testproject1/lib/: lib.cpp  lib.h
